# korun

./: Cargo.toml  Makefile  README.md  spec.md
.dir/: dir.yml
.github/: repo.yaml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-16-korun.md
docs/superpowers/specs/: 2026-03-16-korun-design.md
src/: lib.rs  main.rs
src/cli/: client.rs  mod.rs  serve.rs
src/daemon/: buffer.rs  error.rs  handlers.rs  mod.rs  process.rs  router.rs  session.rs  session_mgr.rs  watcher.rs
tests/: http_test.rs  process_test.rs
